frontend/test/should_fail/index_pattern_multiple_index_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	n:N{multiple(Ei >= 0, Ei <= 1, Ni >= 42, Ni <= 44)};
	
	modify {
	}
}
